PROJECT(openasip)

SET(OPENASIP_BENCHMARK
    ""
    CACHE STRING "Specify which benchmark to run."
)
SET_PROPERTY(CACHE OPENASIP_BENCHMARK PROPERTY STRINGS aes sha256 crc)

IF(NOT OPENASIP_BENCHMARK)
    MESSAGE(FATAL_ERROR "Undefined: OPENASIP_BENCHMARK")
ENDIF()

ADD_SUBDIRECTORY(${OPENASIP_BENCHMARK})

COMMON_ADD_LIBRARY(${PROJECT_NAME} INTERFACE)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} INTERFACE openasip-${OPENASIP_BENCHMARK})
