PROJECT(fmatmul CXX C ASM)

FILE(GLOB BENCH_SRCS *.c *.S kernel/*.c)

COMMON_ADD_LIBRARY(${PROJECT_NAME} STATIC ${BENCH_SRCS})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC .)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC m)
# TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PUBLIC -DSIZE=${MATHIS_SIZE} -DNARGS=${MATHIS_NARGS} -DFUNCTION=${MATHIS_TEST} -DELEM_SIZE=${MATHIS_ELEM_SIZE} -DN=${MATHIS_N})
